# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.446 2014/08/07 11:45:38 keri Exp $

  07 Aug 2014; <keri@gentoo.org> -swi-prolog-6.4.1.ebuild:
  Remove old version

*swi-prolog-7.1.18 (07 Aug 2014)

  07 Aug 2014; <keri@gentoo.org> +swi-prolog-7.1.18.ebuild:
  Bump -7.1 development version

  24 Jul 2014; <keri@gentoo.org> -swi-prolog-6.5.3.ebuild,
  -swi-prolog-6.6.2.ebuild, -swi-prolog-6.6.3.ebuild,
  -swi-prolog-7.1.13.ebuild, -swi-prolog-7.1.14.ebuild,
  -swi-prolog-7.1.15.ebuild:
  Remove old versions

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> swi-prolog-6.6.4.ebuild:
  Stable for ppc, wrt bug #509252

  10 Jul 2014; Chema Alonso <nimiux@gentoo.org> swi-prolog-6.6.4.ebuild:
  Stable for amd64 wrt bug #509252

*swi-prolog-7.1.17 (03 Jul 2014)

  03 Jul 2014; <keri@gentoo.org> +swi-prolog-7.1.17.ebuild:
  Bump -7.1 development version

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> swi-prolog-6.6.4.ebuild:
  x86 stable wrt bug #509252

*swi-prolog-7.1.16 (29 May 2014)

  29 May 2014; <keri@gentoo.org> +swi-prolog-7.1.16.ebuild:
  Bump -7.1. development version

*swi-prolog-6.6.6 (29 May 2014)

  29 May 2014; <keri@gentoo.org> +swi-prolog-6.6.6.ebuild:
  Version bump

*swi-prolog-7.1.15 (23 May 2014)

  23 May 2014; <keri@gentoo.org> +swi-prolog-7.1.15.ebuild:
  Bump -7.1 development version

  15 May 2014; <keri@gentoo.org> -swi-prolog-7.1.11.ebuild,
  -swi-prolog-7.1.12.ebuild:
  Remove old development versions

*swi-prolog-7.1.14 (13 May 2014)

  13 May 2014; <keri@gentoo.org> +swi-prolog-7.1.14.ebuild:
  Bump -7.1 development version

*swi-prolog-6.6.5 (07 May 2014)

  07 May 2014; <keri@gentoo.org> +swi-prolog-6.6.5.ebuild:
  Version bump

*swi-prolog-7.1.13 (18 Apr 2014)

  18 Apr 2014; <keri@gentoo.org> +swi-prolog-7.1.13.ebuild:
  Bump -7.1 development version
