@@ -7,24 +7,27 @@ DIST pl-6.6.6.tar.gz 14838653 SHA256 9f80bb274e2f31fd68b0acbe35982c012d5f8311dbe
 DIST pl-7.1.16.tar.gz 15749514 SHA256 7757e18d3eb57dc7f8d3a39e30c2b38e11cf9c3fc91f177b8f3d44527b5e042b SHA512 3431b55d424191053f4870533955e6ed7fb7681de7c6266ac734511d5066a2cd368f7f1fc1724f8f69efcb735997ff0c297cf4aa22e57429bce2807669900b05 WHIRLPOOL 59b46d0197fc6fcb43faa5eca152582f3caa505ab330e71d116066d293ad646bc2d51f754d5e1f9cef342524aeaf729c582b0bd6527f132fcdb88ab213f0a020
 DIST pl-7.1.17.tar.gz 15754812 SHA256 7496a2cbe8ca9ae0034a6f4662fa4bb046c16624b454ada62ff8c6de734bb735 SHA512 d8538c2c182fa9f2c0ed3b3d28fb1f00737303b5c48e3d19e2dcab6658ba0a96a2ad41dc9be8f99237c563e9c31579c1981e483e322d011796b48fce5e14822c WHIRLPOOL d43ff1706902ee1fe18376a2cf47472faf0f136bf54f5ff120cdbbf09d1c6bec32728379ef42f817fa0447e80937e15e50f3630b18fbeb16f7deba1d6a32d69a
 DIST pl-7.1.18.tar.gz 15759720 SHA256 af11d73cca72ac1df653054027c3798e5bff3e6bb3296fcab023ad222bc68480 SHA512 2ce9c0f3868a0ddf719737d6d4a1ea04891e6ec4e4de3495e47f389efa260d832c0e6e4159c28d967148f218937c28929828ff63905977c429bec6e45f290615 WHIRLPOOL 3e878a3d236cbcf4bfee9ab6658f1c3efac602195e626185e90eaba6ae9d44085d71a1906b3b308bc4fea1ecf9392b07a1d971441b8ba02d8b9e308d9132ecea
+DIST pl-7.1.19.tar.gz 15785768 SHA256 c5673b591edbd61000e27caf76dd06b8fe0c78feb9b4f507ea300329985dd985 SHA512 75f37b67c98807644548f62205085fe03198870aa4b73316926cc2ac23ad750a6656e40a273d6da7d1a4f1a4bbb060ee79b13c0f5941f98826060f1c9444d89e WHIRLPOOL cf8c7415dc2500197a4e1dc9209aac1579358ff68d3bf83ad819b46f89f7e415db2ae77c8585fc7a0959b2110e099fc54f4a477900fc81103903c5bb66c4bb45
 DIST swi-prolog-6.6.4-gentoo-patchset-0.tar.gz 1596 SHA256 727a9ed67cdd8a23bc5d0bd5b2463353071370e58667a73c4ae403ef8a94671f SHA512 98d42047ec54155f7d34928bce3050edd65259b552ea82b763f15391f0283f5229a9a513e5f31c441294c5a7f2f2c4e6f133ff031eccfeaaf7c1037665240be9 WHIRLPOOL 3b4c0b6888e450176483bb5371c5f023864390852b9cf0d6f12b356a8460189e5e6cb85399b378c4b6bda314ce690e9a7ede1f79c74d78f033d7caff3a2fc408
 DIST swi-prolog-6.6.5-gentoo-patchset-0.tar.gz 1595 SHA256 baf043ea3a145d8600ecb9c16722e8578b818b3018d50345e951084a26b018e9 SHA512 62f7a73af4d34b8a13378fb65302b01d2445b3e4f7198e293c4fd9b50948feaf632bd5de0af10aaf2cab9d5fcc214fe04d86e6e969e60b23d9bae4a277214041 WHIRLPOOL 95c6449b2248a0277af1cad70ebc16b46fd6b15d540822f1f9e5370760de94171bcdbb98df9915ce85e2ddda55eaf457eacb26b29f3ed4f61b1f69388454b0a5
 DIST swi-prolog-6.6.6-gentoo-patchset-0.tar.gz 1590 SHA256 2b240d15562603120e0314bb69bde50089326c11876b7a62106c05f9d48ace71 SHA512 807c7e897dd5b9eef14e063ea53c03047f3acb23174a70a613258adf7f85dc1f7637158fde70aab2e0f40de4bc6ac5e3548dd09dbe3745d916a388f43eb832eb WHIRLPOOL 0a0dbc361cfbe343c8b3562a2c0535905eb1443eea0783b14f96bda43c04e8db6264f476c07da766c6936dc6088e34059f799a3244717390644bf0f5ae83018e
 DIST swi-prolog-7.1.16-gentoo-patchset-0.tar.gz 1608 SHA256 0064ebb5f7b0c21e1a5eb81922e1bc8d006b62a54e2c2f41c4b944f2d6384714 SHA512 7e21da84d5425adaebb4e07fc5fff4e70f10ed572dca60069dd8582a98dc63ba8bb8c0d5af1dd889f18ed58d71a9917ab375dc801a352285f894540f6d514f83 WHIRLPOOL 8f3f5f1dadfd8221c8bb5c7e3a2311cc269ae702d4c4b1f459cc3ddbda02f57178d62da31fb53c0301d8f56997d6b5d3796c1a763c46a380a3ce67c474425ecd
 DIST swi-prolog-7.1.17-gentoo-patchset-0.tar.gz 1603 SHA256 3e86f4765a853f9085dd29851ac9c8dd04f74d83539298cbe6650881d54ce6c3 SHA512 bb0620b2680fe3bd5d13634b382e83acde7fe8caf911c7ae489c8cb9a6468caae065e6e30fcc7b0ea7fc524a19e94fe674d4a8c1f9d1f008560d55d6578ba04c WHIRLPOOL ecd27735c9bc3460b103c86c0f1f4cc8bd7f795d153b1fbf3ceb4d881e38467dc60e3081fb39bce85b6ef834ca1af23e31baf9b13e000a4f16b514b7fb4bcd97
 DIST swi-prolog-7.1.18-gentoo-patchset-0.tar.gz 1613 SHA256 7bbf810a1f59091d22cfc64cc5fa4c06702b101bc3b85d6c3fcd3bfa3c8a4652 SHA512 3443cb48b061d56e951798b742303b2fe8f2fa25a379bb3c5005729956159679c6fb9b39e4bcfb5ad801874b32c8edb7c0be0bfce95743cbcd299e9fb70c16ed WHIRLPOOL 96ca628ba1ab8292bd469f87aae7b1a10393b566f2ed8689b5b604407705ea3ceda7dad136459eb7dc0adf9abce40c86c2c5fecd67ea30145c1a6c3dd29a7400
+DIST swi-prolog-7.1.19-gentoo-patchset-0.tar.gz 1626 SHA256 8eac569d988b0e77735364402b9a04748ffde5857ef3e196e1163de6f44c83c9 SHA512 eb942d4443262a3afcbb2dc58b6d404c06d263c220f1ed72ac54c050735655c37ed574c9f9c401470e9e859a0657978aa0b75fe3373a277ee9058cf8f3abc2dd WHIRLPOOL ed5990aae19d460b5cbe98f822653311efe5c61835cc891646b684d5f73d8661f7d6941d823bd9f0bc56895dddb4fd3ed188de17eecc6973b5a9dc7577cad082
 EBUILD swi-prolog-6.6.4.ebuild 2902 SHA256 9df591c63932dec2b0685219c390b0c2c0b19f3bf5873b665e16514e9210d72e SHA512 272a217baf21156871f859242ae94c53846b1beaea152e1eaeb34d65f62f01cc99ce60b1c59c855645197954fa2593f8302eba702423c6f885500a54839bf9da WHIRLPOOL bb824ac614fa9ea2dce825eee441de4975c8e9f114db0e342fefe50ed3cde446dedd92ca7f532b5eccfe599778358242f5078d550c47c26f0aa48982f06b651b
 EBUILD swi-prolog-6.6.5.ebuild 2906 SHA256 fecefea51c16786882b7ee765adc29c858e85e0b94c94c95e3b5140f5092fd0e SHA512 2303eb774dd0cfee6e60490bfa4c3df59930ec6b7bca9b026d204241b7c9d2c9e51dcc42dbb3cc0967058e1b93c616e9190f177678249dfdd41106163f587915 WHIRLPOOL 362ba4675479f0ff0025a24418019eba29c8943bfdb152211637b3fc0ee53b91dd1bcf87c8ea1f8766b11289e813a3cd20b89c1eab602c8883df98bf0acd5d91
 EBUILD swi-prolog-6.6.6.ebuild 2906 SHA256 e7709334eaef476a8e06bfd3005440b22eef96017e698bfa34fb8c3868ad4718 SHA512 dc55b23f631efa5966954acfdee0b1d50666099c982640d1249caee6b2dd8c69a43603d3786f8e0b4d680a695029042c28c5e70062cdea0dcefbb6b90e557174 WHIRLPOOL abc73f513f16836fb17cada1789c92dc8c1cd3fea458df82a2280871c956e41ecb7ccc3440e73b82a5c29b09d1a87af510f0b7fbda2d26da9ed178d6a85dc2af
 EBUILD swi-prolog-7.1.16.ebuild 2906 SHA256 06be730c6bc54d9986ea7f8ca75c92b7d23cfca4f0a48918cb264386ffd39345 SHA512 aa720d488e112dc71fbd8e3947f910afec55b1ca50cec413ed8a6e4b08061cf3131a23fc28de178af1d9ba1f7ed864a2869c31f373e5839737dff0060715ef99 WHIRLPOOL 4910697e6f7a0141260d815c88616678d85dd38fd4a1268dd440a46aa0805315f512f6c69cb164c18218b4851db8677ae7845fa3c530219dfc6b185ff39280c3
 EBUILD swi-prolog-7.1.17.ebuild 2906 SHA256 46f0fe1d915f47cdc9832faedd5867c32ce3338bd7dbde98a1d6dbf36b925f79 SHA512 8a04e3620bbef42f12927da6a7f180d75766d07eb5e72303de1405998795c43904cf58a81571963c3e664c4583024c9cb602ee81e941b5025fceb2c1167f8dbf WHIRLPOOL c53e8c8a614ac5bfa4f2add73f425c5ea1ed787c08ebd2fa46864fe0dd998381282e76e0b013cd0f143717f19533c2b51aa74a265a58e342eabdf08af416c3da
 EBUILD swi-prolog-7.1.18.ebuild 2906 SHA256 2749a56a8bba23a92f550a7405e10c998f8aa188e791f48dbc7ad02296281e3a SHA512 69f22f665acf9be95dcfbccaf6119fda25880b1ef61efd2d1cff89fab341d66b01f4552cbd748d937ddc68ffe08f2f4171509ee76c80da4305e1aec01e0bbcd3 WHIRLPOOL 6f824343e199e763e85977696bc20adfb9d3e846d4919fd0aeb95f22169f6f2b16f00f8801e05a18c98a45eaef9949ef4820968ecb336c9a6713062745a7bc2d
-MISC ChangeLog 65339 SHA256 c3b2d128bfd4ecf0134bb8c53bee497ed9d9e39029e13b1149e0074bb94d5bae SHA512 c50d7a055301b4ec6f3a752b9159dad3f9b623fc6c325a0f759e1a5ffc9c6abd010912d67d43d226088bdbf91fc5ff1fe55e4ccb65e0ec0591ed2467feccdfc1 WHIRLPOOL 791d469fe5bfb3ebad4b619a20955e7286325f5bb0d64c4c9da43b6ba1045103361465bd366eb68389b641efeab17dd33bb9fb021333031e72120f82e0258d6b
+EBUILD swi-prolog-7.1.19.ebuild 2906 SHA256 45cc7bf05a151a1c0bb9833cc44a79af7a8e37da569f79b4a7fdfb29ded8c2bb SHA512 1e647189889af680f701c04ff85b96a6f5051b771e7018a42b65a1beaeeb68d9d26d07f8b7161a6475d6e84f78f7c96fa21536eed326e3bd7838b95633beba20 WHIRLPOOL 913a91d56e1d5bac4df5329704f7b21dbad7c2a420f30d5bd72741523886f917bd8bd00b232e4a8877bf0c8efa0694f4e1c8884c10f0a89c17ec391acf1c6c08
+MISC ChangeLog 65466 SHA256 d658f54f842fbfdf1fdb51075cd79db6b4d73a35e0940278d5750c276d001327 SHA512 dd2f0cad528b8316fef5dc1a271fc7572ca357fcc40f5e54c6c535a1d063a0127d50b4e6177374f6259c311bcbb3f969eb03a9f1fb35f27f75d29925cd8dc0d6 WHIRLPOOL 26c7f18878653a034191fb0fad9eb26664d58a3adaf7a849c16198ec04fe60c1c870fd8c25417d0bc1a50fbbae424f981f47a1d3a09e3b67cf9ff0fabfc7e8fa
 MISC metadata.xml 236 SHA256 cfc0f56c64161129f17e853433bcc92a212ae64ffe70f627ae6e24fd8cc3520a SHA512 c542f8fdc8c524ba187f02788407dd31a87a37255166c6ef184409e1469288736420df4dd39f42bf57bf367532ba9607484a6228790f5e71c1ca7bfb56525194 WHIRLPOOL 472c63b815161c5e04903d12cc2b5f8d7edf56ebdbd5407581534f728b95dc063cdcf227579f75c7ff819d29bb2ba02ee3b79480f46d60aa4de17199163e1242
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlPjZj4ACgkQrwS/tqE49e3dywCggyMO9cQXLZ3PME7H1fb/JrNh
-rzAAn0uA2BvJI6Bs0TtbO2wnYSq+17cD
-=TptV
+iEYEAREIAAYFAlPrQXoACgkQrwS/tqE49e3lbQCeM19WB/KNKmQYYyb16eKJD2pr
+LrYAoJKPvXR/HMR4sZ1aISyAGufbcFsp
+=CiTF
 -----END PGP SIGNATURE-----
