@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.446 2014/08/07 11:45:38 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.447 2014/08/13 10:47:03 keri Exp $
+
+*swi-prolog-7.1.19 (13 Aug 2014)
+
+  13 Aug 2014; <keri@gentoo.org> +swi-prolog-7.1.19.ebuild:
+  Bump -7.1 development version
 
   07 Aug 2014; <keri@gentoo.org> -swi-prolog-6.4.1.ebuild:
   Remove old version
